deployement/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fidelitefront-webapp
  name: fidelitefront-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fidelitefront-webapp
  template:
    metadata:
      labels:
        app: fidelitefront-webapp
    spec:
      containers:
      - image: nexus.labelvie.ma:8012/ma-lbv-fidelite-frontend:CI_PIPELINE_ID
        name: fidelitefront-webapp
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
      imagePullSecrets:
      - name: pullimagedocker
