deployement/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fidelitefront-ws-webapp-svc
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 3000
  selector:
    app: fidelitefront-webapp
