deployement/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fideliteingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: fidelitefront-webapp-svc
            port:
              number: 80
